# minorGems

./: CMakeLists.txt
